[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Decorations/Lever_002.png" type="Texture" id=1]
[ext_resource path="res://Assets/Decorations/Lever_003.png" type="Texture" id=2]
[ext_resource path="res://Assets/Decorations/Lever_001.png" type="Texture" id=3]
[ext_resource path="res://Assets/E_002.png" type="Texture" id=4]
[ext_resource path="res://Assets/E_001.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Lever.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 24.0208

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Lever" type="Node2D"]
script = ExtResource( 6 )

[node name="LeverSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 0, -22 )
frames = SubResource( 3 )
frame = 1
playing = true

[connection signal="frame_changed" from="LeverSprite" to="." method="_on_LeverSprite_frame_changed"]
[connection signal="area_shape_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_shape_entered"]
[connection signal="area_shape_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_shape_exited"]
